--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   sign_button: ^2.0.1
   introduction_screen: ^2.1.0
   flutter_svg: ^0.23.0+1
+  sprung: ^3.0.0
 
 dev_dependencies:
   flutter_test:
