--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Accepting grants the ability to upload images to Global Strongman</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Accepting grants the ability to take images and upload it to Global Strongman</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Accepting grants the ability to upload audio to Global Strongman</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
