--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   introduction_screen: ^2.1.0
   flutter_svg: ^0.23.0+1
   sprung: ^3.0.0
+  multi_select_flutter: ^4.0.0
+  image_picker: ^0.8.4+3
 
 dev_dependencies:
   flutter_test:
@@ -31,7 +33,6 @@ flutter:
   assets:
     - assets/
     - assets/images/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
