--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   sprung: ^3.0.0
   multi_select_flutter: ^4.0.0
   image_picker: ^0.8.4+3
+  flutter_form_builder: ^6.2.0
 
 dev_dependencies:
   flutter_test:
