--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>760421952561-i9mljcslbohau8i9vr9ibqn8ma6p1af2.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.760421952561-i9mljcslbohau8i9vr9ibqn8ma6p1af2</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>760421952561-ji7nctapp5430t3ag0odmsfjjeao3ge5.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyASEWNXBBgarjXzBHNvFHXKyZhnXk9oE4k</string>
 	<key>GCM_SENDER_ID</key>
