--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,14 @@ dependencies:
   multi_select_flutter: ^4.0.0
   image_picker: ^0.8.4+3
   flutter_form_builder: ^6.2.0
+  firebase_core: ^1.8.0
+  cloud_firestore: ^2.5.4
+  firebase_auth: ^3.1.4
+  firebase_storage: ^10.0.6
+  page_transition: "^2.0.4"
+  google_sign_in: ^5.0.3
+  flutter_facebook_auth: "^3.5.3"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
