--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_facebook_auth: "^3.5.3"
   sign_in_with_apple: ^3.2.0
   crypto: ^3.0.1
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
 
 dev_dependencies:
   flutter_test:
