--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   crypto: ^3.0.1
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
   font_awesome_flutter: ^9.2.0
+  cached_network_image: ^3.1.0+1
 
 dev_dependencies:
   flutter_test:
