--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
   font_awesome_flutter: ^9.2.0
   cached_network_image: ^3.1.0+1
+  photo_view: ^0.13.0
 
 dev_dependencies:
   flutter_test:
