--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   cached_network_image: ^3.1.0+1
   photo_view: ^0.13.0
+  fl_chart: ^0.40.2
 
 dev_dependencies:
   flutter_test:
