--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -34,6 +34,8 @@
 	<string>Accepting grants the ability to upload audio to Global Strongman</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Accepting grants the ability to upload images to Global Strongman</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>Accepting grants the ability to upload media to Global Strongman and to your device</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -83,5 +85,10 @@
 	</array>
 	<key>UIStatusBarHidden</key>
 	<false/>
+	<key>NSAppTransportSecurity</key>
+    <dict>
+      <key>NSAllowsArbitraryLoads</key>
+      <true/>
+    </dict>
 </dict>
 </plist>
