--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,10 @@ dependencies:
   cached_network_image: ^3.1.0+1
   photo_view: ^0.13.0
   charts_flutter: ^0.12.0
-
+  video_player: ^2.2.7
+  flutter_rating_bar: ^4.0.0
+  chewie: ^1.2.2
+  sliding_sheet: ^0.5.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
