--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,13 +15,13 @@ dependencies:
   flutter_platform_widgets: ^1.9.5
   sign_button: ^2.0.1
   introduction_screen: ^2.1.0
-  flutter_svg: ^0.23.0+1
+  flutter_svg: ^0.22.0
   sprung: ^3.0.0
   multi_select_flutter: ^4.0.0
   image_picker: ^0.8.4+3
   flutter_form_builder: ^6.2.0
   firebase_core: ^1.8.0
-  cloud_firestore: ^2.5.4
+  cloud_firestore: ^3.1.4
   firebase_auth: ^3.1.4
   firebase_storage: ^10.0.6
   page_transition: "^2.0.4"
@@ -38,6 +38,8 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   chewie: ^1.2.2
   sliding_sheet: ^0.5.2
+  flutterfire_ui: ^0.2.0+2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
