added the workout screens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   chewie: ^1.2.2
   sliding_sheet: ^0.5.2
   flutterfire_ui: ^0.2.0+2
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
