--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   sliding_sheet: ^0.5.2
   flutterfire_ui: ^0.2.0+2
   shared_preferences: ^2.0.11
+  table_calendar: ^3.0.3
 
 dev_dependencies:
   flutter_test:
