--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   flutterfire_ui: ^0.2.0+2
   shared_preferences: ^2.0.11
   table_calendar: ^3.0.3
-
+  intl: ^0.17.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
