--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_native_splash: ^1.3.1
   timeago: ^3.1.0
+  provider: ^6.0.2
 
 flutter_icons:
   android: "launcher_icon"
