added the activity screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter_platform_widgets: ^1.9.5
   sign_button: ^2.0.1
   introduction_screen: ^2.1.0
-  flutter_svg: ^0.22.0
+  flutter_svg: ^1.0.0
   sprung: ^3.0.0
   multi_select_flutter: ^4.0.0
   image_picker: ^0.8.4+3
@@ -42,6 +42,8 @@ dependencies:
   shared_preferences: ^2.0.11
   table_calendar: ^3.0.3
   intl: ^0.17.0
+  provider: ^6.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -49,7 +51,9 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_native_splash: ^1.3.1
   timeago: ^3.1.0
-  provider: ^6.0.2
+
+dependency_overrides:
+  provider: ^6.0.0 # for chewie 1.2.2
 
 flutter_icons:
   android: "launcher_icon"
