--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   table_calendar: ^3.0.3
   intl: ^0.17.0
   provider: ^6.0.2
+  onboarding: ^2.1.0
 
 dev_dependencies:
   flutter_test:
