--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   provider: ^6.0.2
   onboarding: ^2.1.0
   timeline_tile: ^2.0.0
+  focused_menu: ^1.0.5
 
 dev_dependencies:
   flutter_test:
