--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   onboarding: ^2.1.0
   timeline_tile: ^2.0.0
   focused_menu: ^1.0.5
+  modal_bottom_sheet: ^2.0.0
 
 dev_dependencies:
   flutter_test:
