--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   crypto: ^3.0.1
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
   font_awesome_flutter: ^9.2.0
-  cached_network_image: ^3.1.0+1
+  cached_network_image: ^3.2.0
   photo_view: ^0.13.0
   charts_flutter: ^0.12.0
   video_player: ^2.2.7
@@ -58,6 +58,7 @@ dev_dependencies:
 
 dependency_overrides:
   provider: ^6.0.0 # for chewie 1.2.2
+  platform: ^3.1.0
 
 flutter_icons:
   android: "launcher_icon"
