--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   timeline_tile: ^2.0.0
   focused_menu: ^1.0.5
   modal_bottom_sheet: ^2.0.0
-
+  full_screen_menu: ^1.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -55,6 +55,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_native_splash: ^1.3.1
   timeago: ^3.1.0
+  duration_picker: ^1.1.0+1
 
 dependency_overrides:
   provider: ^6.0.0 # for chewie 1.2.2
