--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dev_dependencies:
   flutter_native_splash: ^1.3.1
   timeago: ^3.1.0
   duration_picker: ^1.1.0+1
-
+  sliver_tools: ^0.2.5
 dependency_overrides:
   provider: ^6.0.0 # for chewie 1.2.2
   # platform: ^3.1.0
